--- a/src/main/resources/site/fragments/customer-add.html
+++ b/src/main/resources/site/fragments/customer-add.html
@@ -2,10 +2,12 @@
     <fieldset>
         <legend>Add new customer</legend>
         <div class="form-group">
-            <input type="text" placeholder="First name" ng-model="customer.firstName">
+            <input type="text" placeholder="First name" ng-model="customer.firstName"
+                   ng-enter="addCustomer(customer.firstName, customer.lastName)">
         </div>
         <div class="form-group">
-            <input type="text" placeholder="Last name" ng-model="customer.lastName">
+            <input type="text" placeholder="Last name" ng-model="customer.lastName"
+                   ng-enter="addCustomer(customer.firstName, customer.lastName)">
         </div>
         <button class="btn btn-danger" ng-click="closeAddCustomerForm()">Cancel</button>
         <button class="btn btn-info" ng-click="addCustomer(customer.firstName, customer.lastName)">Submit</button>
