--- a/src/main/resources/site/fragments/login.html
+++ b/src/main/resources/site/fragments/login.html
@@ -1,4 +1,4 @@
-<form>
+<form ng-submit="login(user.username, user.password)">
     <fieldset>
         <legend>Login</legend>
         <div class="form-group">
